# orbro-test

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  db.py  detection.py  main.py  pyproject.toml  requirements.txt  test_websocket.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  config.ts  index.css
